--- a/info/notice.html
+++ b/info/notice.html
@@ -10,7 +10,7 @@
   <script type="text/javascript" src="../js/jquery.min.js"></script>
   <script type="text/javascript" src="../js/common.js"></script>
   <!--[if lt IE 9]>
-  <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <script src = "http://html5shiv.googlecode.com/svn/ulunk/html5.js"></script>
   <![endif]-->
 </head>
 
@@ -34,93 +34,95 @@
               <li><a href="./notice.html">전자공고</a></li>
             </ul>
           </li>
-          <li><a href="./chanel/chanel.html">홍보채널</a>
+          <li><a href="../chanel/chanel.html">홍보채널</a>
             <ul class="submenu">
-              <li><a href="./chanel/chanel.html">브랜드 영상</a></li>
-              <li><a href="./chanel/news.html">보도자료</a></li>
+              <li><a href="../chanel/chanel.html">브랜드 영상</a></li>
+              <li><a href="../chanel/news.html">보도자료</a></li>
             </ul>
           </li>
-          <li><a href="./csr/csr1.html">CSR 경영</a>
+          <li><a href="../csr/csr1.html">CSR 경영</a>
             <ul class="submenu">
-              <li><a href="./csr/csr1.html">CSR 경영</a></li>
-              <li><a href="./csr/csr2.html">투명경영</a></li>
-              <li><a href="./csr/csr3.html">사회공헌</a></li>
-              <li><a href="./csr/csr4.html">상생경영</a></li>
-              <li><a href="./csr/csr5.html">핫라인</a></li>
+              <li><a href="../csr/csr1.html">CSR 경영</a></li>
+              <li><a href="../csr/csr2.html">투명경영</a></li>
+              <li><a href="../csr/csr3.html">사회공헌</a></li>
+              <li><a href="../csr/csr4.html">상생경영</a></li>
+              <li><a href="../csr/csr5.html">핫라인</a></li>
             </ul>
           </li>
-          <li><a href="./location/location.html">찾아오시는 길</a></li>
+          <li><a href="../location/location.html">찾아오시는 길</a></li>
         </ul>
       </nav>
     </header>
 
     <div class="notice-wrap">
       <div class="notice-banner">
-        <h1>전자공고</h1>
-        <span></span>
-        <p>SSG.COM의 공지사항을<br>안내해드립니다.</p>
+        <div class="notice-text">
+          <h1>전자공고</h1>
+          <span></span>
+          <p>SSG.COM의 공지사항을<br>안내해드립니다.</p>
+        </div>
       </div>
 
       <div class="notice-table">
         <div class="table-wrap">
-          <thead class="name">
-            <tr>
-              <th>제목</th>
-              <th>등록일</th>
-            </tr>
-          </thead>
-          <tbody class="text">
-            <tr>
-              <td class="subtext">
+          <div class="name">
+            <ul class="name2">
+              <li class="title">제목</li>
+              <li class="date">등록일</li>
+            </ul>
+          </div>
+          <nav class="text">
+            <ul class="text-lab">
+              <li class="subtext">
                 제3기 결산공고
-              </td>
-              <td class="day">
+              </li>
+              <li class="day">
                 2021-03-22
-              </td>
-            </tr>
-            <tr>
-              <td class="subtext">
+              </li>
+            </ul>
+            <ul class="text-lab">
+              <li class="subtext">
                 전자증권제도 도입관련 주주 공지(실물주권 효력 말소, 전자등록일 고지 등)
-              </td>
-              <td class="day">
+              </li>
+              <li class="day">
                 2021-03-27
-              </td>
-            </tr>
-            <tr>
-              <td class="subtext">
+              </li>
+            </ul>
+            <ul class="text-lab">
+              <li class="subtext">
                 제2기 결산공고
-              </td>
-              <td class="day">
+              </li>
+              <li class="day">
                 2020-03-24
-              </td>
-            </tr>
-            <tr>
-              <td class="subtext">
+              </li>
+            </ul>
+            <ul class="text-lab">
+              <li class="subtext">
                 제1기 결산공고
-              </td>
-              <td class="day">
+              </li>
+              <li class="day">
                 2019-03-14
-              </td>
-            </tr>
-            <tr>
-              <td class="subtext">
+              </li>
+            </ul>
+            <ul class="text-lab">
+              <li class="subtext">
                 (주) 이마트몰 합병에 따른 채권자 이의 제출 공고
-              </td>
-              <td class="day">
+              </li>
+              <li class="day">
                 2019-01-29
-              </td>
-            </tr>
-            <tr>
-              <td class="subtext">
+              </li>
+            </ul>
+            <ul class="text-lab">
+              <li class="subtext">
                 (주) 신세계몰 합병에 따른 채권자 이의 및 주권 제출 공고
-              </td>
-              <td class="day">
+              </li>
+              <li class="day">
                 2019-01-29
-              </td>
-            </tr>
-          </tbody>
+              </li>
+            </ul>
+          </nav>
+          <button class="page-num">1</button>
         </div>
-        <p class="page-num">1</p>
       </div>
     </div>
 
@@ -149,7 +151,7 @@
           <div class="container2">
             <!-- footer 하단 영역 -->
             <div class="coypyright">
-              ⓒcopryright <strong>mypage</strong> .All Rights Reserved.
+              ⓒcopryright <sulong>mypage</sulong> .All Rights Reserved.
             </div>
             <div class="credits">
               Designed By <a href="http://company.ssg.com/main.ssg">SSG.COM</a>
