--- a/company/introduce.html
+++ b/company/introduce.html
@@ -34,22 +34,22 @@
               <li><a href="../info/notice.html">전자공고</a></li>
             </ul>
           </li>
-          <li><a href="./gallery/gallery.html">홍보채널</a>
+          <li><a href="../chanel/chanel.html">홍보채널</a>
             <ul class="submenu">
-              <li><a href="./company/introduce.html">브랜드 영상</a></li>
-              <li><a href="./company/ci.html">보도자료</a></li>
+              <li><a href="../chanel/chanel.html">브랜드 영상</a></li>
+              <li><a href="../chanel/news.html">보도자료</a></li>
             </ul>
           </li>
-          <li><a href="./community/notice.html">CSR 경영</a>
+          <li><a href="../csr/csr1.html">CSR 경영</a>
             <ul class="submenu">
-              <li><a href="./company/introduce.html">CSR 경영</a></li>
-              <li><a href="./company/ci.html">투명경영</a></li>
-              <li><a href="./company/history.html">사회공헌</a></li>
-              <li><a href="./company/history.html">상생경영</a></li>
-              <li><a href="./company/history.html">핫라인</a></li>
+              <li><a href="../csr/csr1.html">CSR 경영</a></li>
+              <li><a href="../csr/csr2.html">투명경영</a></li>
+              <li><a href="../csr/csr3.html">사회공헌</a></li>
+              <li><a href="../csr/csr4.html">상생경영</a></li>
+              <li><a href="../csr/csr5.html">핫라인</a></li>
             </ul>
           </li>
-          <li><a href="./location/location.html">찾아오시는 길</a></li>
+          <li><a href="../location/location.html">찾아오시는 길</a></li>
         </ul>
       </nav>
     </header>
