--- a/csr/csr1.html
+++ b/csr/csr1.html
@@ -1,114 +1,181 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
-  <title>product</title>
-  <meta name="description" content="product content">
+  <title>SSG 이윤정 포트폴리오 sass site</title>
+  <meta name="description" content="sass site add footer style">
   <link rel="stylesheet" href="../asset/css/style.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <script type="text/javascript" src="../js/jquery.min.js"></script>
   <script type="text/javascript" src="../js/common.js"></script>
   <!--[if lt IE 9]>
-  <script src = "http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <script src = "http://html5shiv.googlecode.com/svn/ulunk/html5.js"></script>
   <![endif]-->
 </head>
-<body class="subpage">
- <div id="wrap">
-   <header id="header">
+
+<body>
+  <div id="wrap">
+    <header id="header">
       <!-- 헤더 영역  -->
-      <h1 id="top_logo"><a href="../index.html">Xwood</a></h1>
+      <h1 id="top_logo"><a href="../index.html"><img src="../asset/img/main/ssg_logo_black.svg" alt=""></a></h1>
       <nav id="top_nav">
         <ul>
           <li>
-            <a href="../company/introduce.html">Company</a>
+            <a href="../company/introduce.html">회사소개</a>
             <ul class="submenu">
-              <li><a href="../company/introduce.html">introduce</a></li>
-              <li><a href="../company/ci.html">ci</a></li>
-              <li><a href="../company/history.html">history</a></li>
+              <li><a href="../company/introduce.html">SSG.COM 소개</a></li>
+              <li><a href="../company/history.html">성장 스토리</a></li>
+              <li><a href="../company/brand.html">브랜드 스토리</a></li>
             </ul>
           </li>
-          <li><a href="../product/product.html">Product</a></li>
-          <li><a href="../gallery/gallery.html">Gallery</a></li>
-          <li><a href="../community/notice.html">Community</a></li>
-          <li><a href="../location/location.html">Location</a></li>
+          <li><a href="../info/notice.html">경영정보</a>
+            <ul class="submenu">
+              <li><a href="../info/notice.html">전자공고</a></li>
+            </ul>
+          </li>
+          <li><a href="../chanel/chanel.html">홍보채널</a>
+            <ul class="submenu">
+              <li><a href="../chanel/chanel.html">브랜드 영상</a></li>
+              <li><a href="../chanel/news.html">보도자료</a></li>
+            </ul>
+          </li>
+          <li><a href="./csr1.html" style="color: #6081C8;">CSR 경영</a>
+            <ul class="submenu">
+              <li><a href="./csr1.html">CSR 경영</a></li>
+              <li><a href="./csr2.html">투명경영</a></li>
+              <li><a href="./csr3.html">사회공헌</a></li>
+              <li><a href="./csr4.html">상생경영</a></li>
+              <li><a href="./csr5.html">핫라인</a></li>
+            </ul>
+          </li>
+          <li><a href="../location/location.html">찾아오시는 길</a></li>
         </ul>
       </nav>
-   </header>
-   <main>
-     <!-- 컨텐츠 영역 -->
-     <div class="container">
-       <!-- 왼쪽메뉴 -->
-       <aside id="lnb">
-         <ul>
-           <li><a href="./product.html" class="on">Product</a></li>
-         </ul>
-       </aside>
-       <!-- 컨텐츠 본문 -->
-       <div class="content">
-         <h2 class="sub_title"><span>Product</span></h2>
-         <div class="inner">
-            product  layout  구현
-         </div>
-       </div>
-     </div>
-   </main>
-   <!-- 하단 영역 -->
-   <footer id="footer">
-     <div class="footer_top">
-       <!-- footer 상단 영역 -->
-       <div class="container">
-         <div class="row">
-           <div class="column footer_logo">
-             <!-- footer logo -->
-             <h3>logo</h3>
-           </div>
-           <div class="column">
-             <!-- site map -->
-             <h4>site map</h4>
-             <ul>
-               <li><a href="../company/introduce.html">Company</a></li>
-               <li><a href="../product/product.html">Product</a></li>
-               <li><a href="../gallery/gallery.html">Gallery</a></li>
-               <li><a href="../community/notice.html">Community</a></li>
-               <li><a href="../location/location.html">Location</a></li>
-             </ul>
-           </div>
-           <div class="column">
-             <!-- contact us -->
-             <h4>contact us</h4>
-             <p>
-               A108 Adam street<br>
-               New York, NY 535022<br>
-               United states<br>
-               <strong>phone&nbsp;:&nbsp;</strong><a href="tel=+82-010-0000-0000">+82-010-0000-0000</a><br>
-               <strong>Email&nbsp;:&nbsp;</strong><a href="mailto=mymail@naver.com">mymail@naver.com</a><br>
-             </p>
-           </div>
-           <div class="column news">
-             <!-- news -->
-             <h4>news</h4>
-             <p>
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet,
-               consectetur adipisicing elit
-             </p>
-             <form action="">
-               <input type="search" name="search">
-               <input type="submit" value="search">
-             </form>
-           </div>
-         </div>
-       </div>
-     </div>
-     <div class="container">
-       <!-- footer 하단 영역 -->
-       <div class="coypyright">
-         ⓒcopryright <strong>mypage</strong> .All Rights Reserved.
-       </div>
-       <div class="credits">
-         Designed By <a href="mailto:mymail@naver.com">My Name</a>
-       </div>
-     </div>
-   </footer>
- </div>
+    </header>
+
+    <div class="csr-wrap">
+      <div class="csr-banner">
+        <div class="csr-text">
+          <h1>CSR 경영</h1>
+          <span></span>
+          <p>SSG.COM은 사회적 책임경영을<br>바탕으로 이해관계자들과 함께<br>지속적으로 발전시켜 나가고자 합니다.</p>
+        </div>
+      </div>
+
+      <div class="csr1-wrap">
+        <div class="csr1-box">
+          <h2>사회적 책임경영</h2>
+          <p>SSG.COM은 신세계 그룹의 기업경영 패러다임인 사회적 책임경영을 바탕으로 이해관계자들과 함께 지속적으로 발전시켜 나가고자 합니다.</p>
+          <div class="csr1-imgbox">
+            <div class="csr1-img">
+              <img src="../asset/img/csr/csr1.svg" alt="">
+              <p>법과 양심에 따른<br>정직하고 투명한 경영</p>
+            </div>
+            <div class="csr1-img">
+              <img src="../asset/img/csr/csr2.svg" alt="">
+              <p>임직원과 회사가<br>힘을 합쳐 자발적으로<br>참여하는 사회공헌</p>
+            </div>
+            <div class="csr1-img">
+              <img src="../asset/img/csr/csr3.svg" alt="">
+              <p>협력회사와의<br>동반성장</p>
+            </div>
+            <div class="csr1-img">
+              <img src="../asset/img/csr/csr4.svg" alt="">
+              <p>기업의 성장과<br>고용유지를 통한<br>국가 경제발전에 기여</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="csr1-box2">
+          <h2>사회적 책임경영의 추진방향</h2>
+          <p>· 국제기준(ISO 26000)에 맞는 Global Standard 수준의 사회적 책임경영 추진</p>
+          <div class="csr1-imgbox2">
+            <div class="csr1-img2">
+              <img src="../asset/img/csr/csr5.svg" alt="">
+              <h4>지배구조</h4>
+              <p>책임경영 강화<br>관계사간 거래원칙 준수</p>
+            </div>
+            <div class="csr1-img2">
+              <img src="../asset/img/csr/csr6.svg" alt="">
+              <h4>지역사회</h4>
+              <p>고용,소득 창출 등 지역사회와의<br>공생발전에 본원적인 기여</p>
+            </div>
+            <div class="csr1-img2">
+              <img src="../asset/img/csr/csr7.svg" alt="">
+              <h4>공정운영</h4>
+              <p>공정거래 문화 정착<br>협력회사와의 동반성장 강화</p>
+            </div>
+            <div class="csr1-img2">
+              <img src="../asset/img/csr/csr8.svg" alt="">
+              <h4>소비자</h4>
+              <p>소비자 권익보호 활동<br>신뢰 환경 조성</p>
+            </div>
+            <div class="csr1-img2">
+              <img src="../asset/img/csr/csr9.svg" alt="">
+              <h4>환경</h4>
+              <p>친환경 문화 확산</p>
+            </div>
+            <div class="csr1-img2">
+              <img src="../asset/img/csr/csr10.svg" alt="">
+              <h4>인권/노동</h4>
+              <p>인권, 노동환경 관련 규정 준수<br>소외계층 고용확대, 복지 선진화</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="csr1-box3">
+          <p>· 4대 사회적 책임경영 체계</p>
+          <div class="box3-img">
+            <img src="../asset/img/csr/diagram1.jpg" alt="">
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+
+    <!-- 하단 영역 -->
+    <footer id="footer">
+      <div class="footer-wrap">
+        <div class="footer-logo">
+          <h6>(주)에스에스지닷컴</h6>
+        </div>
+        <div class="container">
+          <div class="foot-info">
+            <span>대표자 : 강희석 </span>
+            <p>사업자등록번호 : 870-88-01143 서울특별시 종로구 우정국로 26 통신판매업 신고번호 : 제2020-서울종로-1154호</p>
+            <span>개인정보보호책임자 : 김민</span>
+            <p>FAX : 02-2068-7118 ssg@ssg.com</p>
+          </div>
+          <div class="foot-bottom">
+            <nav>
+              <ul>
+                <li><a href="#">개인정보처리방침</a></li>
+                <li><a href="#">영상정보처리기기 운영관리방침</a></li>
+                <li><a href="#">핫라인</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="container2">
+            <!-- footer 하단 영역 -->
+            <div class="coypyright">
+              ⓒcopryright <sulong>mypage</sulong> .All Rights Reserved.
+            </div>
+            <div class="credits">
+              Designed By <a href="http://company.ssg.com/main.ssg">SSG.COM</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+
+  </div>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
+
 </html>
