페이지1완성

--- a/csr/csr1.html
+++ b/csr/csr1.html
@@ -93,33 +93,45 @@
           <div class="csr1-imgbox2">
             <div class="csr1-img2">
               <img src="../asset/img/csr/csr5.svg" alt="">
-              <h4>지배구조</h4>
-              <p>책임경영 강화<br>관계사간 거래원칙 준수</p>
+              <div class="text">
+                <h4>지배구조</h4>
+                <p>책임경영 강화<br>관계사간 거래원칙 준수</p>
+              </div>
             </div>
             <div class="csr1-img2">
               <img src="../asset/img/csr/csr6.svg" alt="">
+              <div class="text">
               <h4>지역사회</h4>
               <p>고용,소득 창출 등 지역사회와의<br>공생발전에 본원적인 기여</p>
+              </div>
             </div>
             <div class="csr1-img2">
               <img src="../asset/img/csr/csr7.svg" alt="">
+              <div class="text">
               <h4>공정운영</h4>
               <p>공정거래 문화 정착<br>협력회사와의 동반성장 강화</p>
+              </div>
             </div>
             <div class="csr1-img2">
               <img src="../asset/img/csr/csr8.svg" alt="">
+              <div class="text">
               <h4>소비자</h4>
               <p>소비자 권익보호 활동<br>신뢰 환경 조성</p>
+              </div>
             </div>
             <div class="csr1-img2">
               <img src="../asset/img/csr/csr9.svg" alt="">
+              <div class="text">
               <h4>환경</h4>
               <p>친환경 문화 확산</p>
+              </div>
             </div>
             <div class="csr1-img2">
               <img src="../asset/img/csr/csr10.svg" alt="">
+              <div class="text">
               <h4>인권/노동</h4>
               <p>인권, 노동환경 관련 규정 준수<br>소외계층 고용확대, 복지 선진화</p>
+              </div>
             </div>
           </div>
         </div>
