--- a/csr/csr4.html
+++ b/csr/csr4.html
@@ -72,8 +72,9 @@
           </div>
         </div>
         <div class="text">
-          <h2>CSR 전담조직 운영</h2>
-          <p>SSG.COM은 소외계층을 위한 다양한 사회공헌 활동을 전개하고 있습니다. 바자회, 생필품 기부, 헌혈증 기부 등 전 임직원들과 함께 소외된 우리 이웃을 위한 사회공헌 프로그램에 참여하고 있으며, 이후에도 SSG.COM만의 특화된 사회공헌 활동을 지속적으로 개발하여 전개해 나갈 것입니다.</p>
+          <h2>신규입점 상담 안내</h2>
+          <p>SSG.COM에 대한 입점 관련 사항은 협력회사 상담실에서 문의하실 수 있으며 모든 업무는 온라인으로 진행되고 있습니다.</p>
+          <button type="button" class="qna">SSG.COM 협력회사 상담실  〉</button>
         </div>
       </div>
 
