--- a/location/location.html
+++ b/location/location.html
@@ -17,21 +17,38 @@
   <div id="wrap">
     <header id="header">
       <!-- 헤더 영역  -->
-      <h1 id="top_logo"><a href="../index.html">Xwood</a></h1>
+      <h1 id="top_logo"><a href="../index.html"><img src="../asset/img/main/ssg_logo_black.svg" alt=""></a></h1>
       <nav id="top_nav">
         <ul>
           <li>
-            <a href="../company/introduce.html">Company</a>
+            <a href="../company/introduce.html">회사소개</a>
             <ul class="submenu">
-              <li><a href="../company/introduce.html">introduce</a></li>
-              <li><a href="../company/ci.html">ci</a></li>
-              <li><a href="../company/history.html">history</a></li>
+              <li><a href="../company/introduce.html">SSG.COM 소개</a></li>
+              <li><a href="../company/history.html">성장 스토리</a></li>
+              <li><a href="../company/brand.html">브랜드 스토리</a></li>
             </ul>
           </li>
-          <li><a href="../product/product.html">Product</a></li>
-          <li><a href="../gallery/gallery.html">Gallery</a></li>
-          <li><a href="../community/notice.html">Community</a></li>
-          <li><a href="../location/location.html">Location</a></li>
+          <li><a href="../info/notice.html">경영정보</a>
+            <ul class="submenu">
+              <li><a href="../info/notice.html">전자공고</a></li>
+            </ul>
+          </li>
+          <li><a href="../chanel.html">홍보채널</a>
+            <ul class="submenu">
+              <li><a href="../chanel.html">브랜드 영상</a></li>
+              <li><a href="../news.html">보도자료</a></li>
+            </ul>
+          </li>
+          <li><a href="../csr/csr1.html">CSR 경영</a>
+            <ul class="submenu">
+              <li><a href="../csr/csr1.html">CSR 경영</a></li>
+              <li><a href="../csr/csr2.html">투명경영</a></li>
+              <li><a href="../csr/csr3.html">사회공헌</a></li>
+              <li><a href="../csr/csr4.html">상생경영</a></li>
+              <li><a href="../csr/csr5.html">핫라인</a></li>
+            </ul>
+          </li>
+          <li><a href="./location.html" style="color: #6081C8;">찾아오시는 길</a></li>
         </ul>
       </nav>
     </header>
@@ -55,62 +72,39 @@
     </main>
     <!-- 하단 영역 -->
     <footer id="footer">
-      <div class="footer_top">
-        <!-- footer 상단 영역 -->
+      <div class="footer-wrap">
+        <div class="footer-logo">
+          <h6>(주)에스에스지닷컴</h6>
+        </div>
         <div class="container">
-          <div class="row">
-            <div class="column footer_logo">
-              <!-- footer logo -->
-              <h3>logo</h3>
-            </div>
-            <div class="column">
-              <!-- site map -->
-              <h4>site map</h4>
+          <div class="foot-info">
+            <span>대표자 : 강희석 </span>
+            <p>사업자등록번호 : 870-88-01143 서울특별시 종로구 우정국로 26 통신판매업 신고번호 : 제2020-서울종로-1154호</p>
+            <span>개인정보보호책임자 : 김민</span>
+            <p>FAX : 02-2068-7118 ssg@ssg.com</p>
+          </div>
+          <div class="foot-bottom">
+            <nav>
               <ul>
-                <li><a href="../company/introduce.html">Company</a></li>
-                <li><a href="../product/product.html">Product</a></li>
-                <li><a href="../gallery/gallery.html">Gallery</a></li>
-                <li><a href="../community/notice.html">Community</a></li>
-                <li><a href="../location/location.html">Location</a></li>
+                <li><a href="#">개인정보처리방침</a></li>
+                <li><a href="#">영상정보처리기기 운영관리방침</a></li>
+                <li><a href="#">핫라인</a></li>
               </ul>
+            </nav>
+          </div>
+          <div class="container2">
+            <!-- footer 하단 영역 -->
+            <div class="coypyright">
+              ⓒcopryright <sulong>mypage</sulong> .All Rights Reserved.
             </div>
-            <div class="column">
-              <!-- contact us -->
-              <h4>contact us</h4>
-              <p>
-                A108 Adam street<br>
-                New York, NY 535022<br>
-                United states<br>
-                <strong>phone&nbsp;:&nbsp;</strong><a href="tel=+82-010-0000-0000">+82-010-0000-0000</a><br>
-                <strong>Email&nbsp;:&nbsp;</strong><a href="mailto=mymail@naver.com">mymail@naver.com</a><br>
-              </p>
-            </div>
-            <div class="column news">
-              <!-- news -->
-              <h4>news</h4>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut laboreLorem ipsum dolor sit amet,
-                consectetur adipisicing elit
-              </p>
-              <form action="">
-                <input type="search" name="search">
-                <input type="submit" value="search">
-              </form>
+            <div class="credits">
+              Designed By <a href="http://company.ssg.com/main.ssg">SSG.COM</a>
             </div>
           </div>
         </div>
       </div>
-      <div class="container">
-        <!-- footer 하단 영역 -->
-        <div class="coypyright">
-          ⓒcopryright <strong>mypage</strong> .All Rights Reserved.
-        </div>
-        <div class="credits">
-          Designed By <a href="mailto:mymail@naver.com">My Name</a>
-        </div>
-      </div>
     </footer>
+
   </div>
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=b29a5134e064fc07c9ac32fbfb018881"></script>
   <script>
