--- a/csr/csr3.html
+++ b/csr/csr3.html
@@ -63,14 +63,16 @@
         </div>
       </div>
 
-      <div class="csr2-box2">
-        <div class="text">
-          <h2>희망배달캠페인</h2>
-          <p>SSG.COM 은 신세계 그룹이 2006년 3월부터 시작하여 매월 임직원의 기부와, 그 동일 금액을 회사도 기부(매칭그랜트)하여 기금을 조성하는 희망배달캠페인을 진행하고 있습니다. 희망배달캠페인은 기존의 기업 중심형의 기부가 아닌 개인들의 자발적인 참여로 이루어지는 선진형 기부캠페인으로 다양한 활동을 활발하게 진행해 오고 있습니다. 희망배달캠페인으로 조성된 기금은 소외계층 아동과의 결연후원, 환아지원, 소외계층 사회진출 지원, 문화 사회공헌 활동 등 다양한 지원사업에 사용하고 있습니다.</p>
-        </div>
-        <div class="text">
-          <h2>CSR 전담조직 운영</h2>
-          <p>SSG.COM은 소외계층을 위한 다양한 사회공헌 활동을 전개하고 있습니다. 바자회, 생필품 기부, 헌혈증 기부 등 전 임직원들과 함께 소외된 우리 이웃을 위한 사회공헌 프로그램에 참여하고 있으며, 이후에도 SSG.COM만의 특화된 사회공헌 활동을 지속적으로 개발하여 전개해 나갈 것입니다.</p>
+      <div class="csr2-wrap">
+        <div class="csr2-box2">
+          <div class="text">
+            <h2>희망배달캠페인</h2>
+            <p>SSG.COM 은 신세계 그룹이 2006년 3월부터 시작하여 매월 임직원의 기부와, 그 동일 금액을 회사도 기부(매칭그랜트)하여 기금을 조성하는 희망배달캠페인을 진행하고 있습니다. 희망배달캠페인은 기존의 기업 중심형의 기부가 아닌 개인들의 자발적인 참여로 이루어지는 선진형 기부캠페인으로 다양한 활동을 활발하게 진행해 오고 있습니다. 희망배달캠페인으로 조성된 기금은 소외계층 아동과의 결연후원, 환아지원, 소외계층 사회진출 지원, 문화 사회공헌 활동 등 다양한 지원사업에 사용하고 있습니다.</p>
+          </div>
+          <div class="text">
+            <h2>CSR 전담조직 운영</h2>
+            <p>SSG.COM은 소외계층을 위한 다양한 사회공헌 활동을 전개하고 있습니다. 바자회, 생필품 기부, 헌혈증 기부 등 전 임직원들과 함께 소외된 우리 이웃을 위한 사회공헌 프로그램에 참여하고 있으며, 이후에도 SSG.COM만의 특화된 사회공헌 활동을 지속적으로 개발하여 전개해 나갈 것입니다.</p>
+          </div>
         </div>
       </div>
 
