--- a/csr/csr4.html
+++ b/csr/csr4.html
@@ -63,18 +63,20 @@
         </div>
       </div>
 
-      <div class="csr2-box2">
-        <div class="text">
-          <h2>상생경영을 통한 협력회사와의 동반성장 실천</h2>
-          <p>SSG.COM은 협력회사와의 동반성장을 위해 다양한 프로그램을 개발하고 실질적인 상생협력 모델을 구축하려 노력하고 있습니다.</p>
-          <div class="text-img">
-            <img src="../asset/img/csr/diagram2.jpg" alt="">
+      <div class="csr2-wrap">
+        <div class="csr2-box2">
+          <div class="text">
+            <h2>상생경영을 통한 협력회사와의 동반성장 실천</h2>
+            <p>SSG.COM은 협력회사와의 동반성장을 위해 다양한 프로그램을 개발하고 실질적인 상생협력 모델을 구축하려 노력하고 있습니다.</p>
+            <div class="text-img">
+              <img src="../asset/img/csr/diagram2.jpg" alt="">
+            </div>
           </div>
-        </div>
-        <div class="text">
-          <h2>신규입점 상담 안내</h2>
-          <p>SSG.COM에 대한 입점 관련 사항은 협력회사 상담실에서 문의하실 수 있으며 모든 업무는 온라인으로 진행되고 있습니다.</p>
-          <button type="button" class="qna">SSG.COM 협력회사 상담실  〉</button>
+          <div class="text type2">
+            <h2>신규입점 상담 안내</h2>
+            <p>SSG.COM에 대한 입점 관련 사항은 협력회사 상담실에서 문의하실 수 있으며 모든 업무는 온라인으로 진행되고 있습니다.</p>
+            <button type="button" class="qna">SSG.COM 협력회사 상담실  〉</button>
+          </div>
         </div>
       </div>
 
