--- a/csr/csr5.html
+++ b/csr/csr5.html
@@ -64,8 +64,49 @@
       </div>
 
       <div class="csr2-wrap">
-        <div class="csr2-box">
-
+        <div class="csr2-box2">
+          <div class="text">
+            <h2>SSG.COM 핫라인</h2>
+            <p>SSG.COM 과 거래 시 부당한 점이나 사회적 책임경영에 어긋나는 행위, 동반성장을 위한 개선 사항 및 아이디어, 임직원의 부정부실과 관련된 잘못된 관행이나 정책 부분에 대한 의견이 있을 경우 핫라인을 통해 접수해 주시기 바랍니다.</p>
+          </div>
+          <div class="text">
+            <h2>SSG.COM 핫라인 제보 대상</h2>
+          </div>
+          <div class="csr5-imgbox">
+            <div class="csr5-img">
+              <img src="../asset/img/csr/sinmungo1.svg" alt="">
+              <p>임직원의 부당한 업무처리,<br>거래상 불공정 행위</p>
+            </div>
+            <div class="csr5-img">
+              <img src="../asset/img/csr/sinmungo2.svg" alt="">
+              <p>금품수수 및 향응 요구,<br>사회적 책임경영 위반 사례</p>
+            </div>
+            <div class="csr5-img">
+              <img src="../asset/img/csr/sinmungo3.svg" alt="">
+              <p>직장 내 성희롱,<br>성폭력 사례</p>
+            </div>
+            <div class="csr5-img">
+              <img src="../asset/img/csr/sinmungo4.svg" alt="">
+              <p>동반성장을 위한<br>협력회사 제언</p>
+            </div>
+            <div class="csr5-img">
+              <img src="../asset/img/csr/sinmungo5.svg" alt="">
+              <p>동반성장을 위한<br>정책/제도개선 아이디어</p>
+            </div>
+            <div class="csr5-img">
+              <img src="../asset/img/csr/sinmungo6.svg" alt="">
+              <p>기타 회사규정<br>위반행위</p>
+            </div>
+          </div>
+          <div class="text">
+            <h2>비밀보장</h2>
+            <p>위반 사례로 접수된 내용은 SSG.COM CSR팀에서 전담하며 신고자와 관련된 내용은 절대 비밀을 보장합니다.</p>
+          </div>
+          <div class="text type2">
+            <h2>확인조사</h2>
+            <p>신고자 희망 시 비공개 조사를 실시하며, 익명으로 접수된 내용이라도 사실 여부를 명확하게 조사하는 것을 원칙으로 합니다.</p>
+            <button type="button" class="qna">SSG.COM 핫라인 신고하기  〉</button>
+          </div>
         </div>
       </div>
 
