--- a/index.html
+++ b/index.html
@@ -18,40 +18,42 @@
   <div id="wrap">
     <header id="header">
       <!-- 헤더 영역  -->
-      <h1 id="top_logo"><a href="./index.html"><img src="./asset/img/main/ssg_logo_black.svg" alt=""></a></h1>
-      <nav id="top_nav">
-        <ul>
-          <li>
-            <a href="./company/introduce.html">회사소개</a>
-            <ul class="submenu">
-              <li><a href="./company/introduce.html">SSG.COM 소개</a></li>
-              <li><a href="./company/history.html">성장 스토리</a></li>
-              <li><a href="./company/brand.html">브랜드 스토리</a></li>
-            </ul>
-          </li>
-          <li><a href="./info/notice.html">경영정보</a>
-            <ul class="submenu">
-              <li><a href="./info/notice.html">전자공고</a></li>
-            </ul>
-          </li>
-          <li><a href="./chanel/chanel.html">홍보채널</a>
-            <ul class="submenu">
-              <li><a href="./chanel/chanel.html">브랜드 영상</a></li>
-              <li><a href="./chanel/news.html">보도자료</a></li>
-            </ul>
-          </li>
-          <li><a href="./csr/csr1.html">CSR 경영</a>
-            <ul class="submenu">
-              <li><a href="./csr/csr1.html">CSR 경영</a></li>
-              <li><a href="./csr/csr2.html">투명경영</a></li>
-              <li><a href="./csr/csr3.html">사회공헌</a></li>
-              <li><a href="./csr/csr4.html">상생경영</a></li>
-              <li><a href="./csr/csr5.html">핫라인</a></li>
-            </ul>
-          </li>
-          <li><a href="./location/location.html">찾아오시는 길</a></li>
-        </ul>
-      </nav>
+      <div class="header-wrap">
+        <h1 id="top_logo"><a href="./index.html"><img src="./asset/img/main/ssg_logo_black.svg" alt=""></a></h1>
+        <nav id="top_nav">
+          <ul>
+            <li>
+              <a href="./company/introduce.html">회사소개</a>
+              <ul class="submenu">
+                <li><a href="./company/introduce.html">SSG.COM 소개</a></li>
+                <li><a href="./company/history.html">성장 스토리</a></li>
+                <li><a href="./company/brand.html">브랜드 스토리</a></li>
+              </ul>
+            </li>
+            <li><a href="./info/notice.html">경영정보</a>
+              <ul class="submenu">
+                <li><a href="./info/notice.html">전자공고</a></li>
+              </ul>
+            </li>
+            <li><a href="./chanel/chanel.html">홍보채널</a>
+              <ul class="submenu">
+                <li><a href="./chanel/chanel.html">브랜드 영상</a></li>
+                <li><a href="./chanel/news.html">보도자료</a></li>
+              </ul>
+            </li>
+            <li><a href="./csr/csr1.html">CSR 경영</a>
+              <ul class="submenu">
+                <li><a href="./csr/csr1.html">CSR 경영</a></li>
+                <li><a href="./csr/csr2.html">투명경영</a></li>
+                <li><a href="./csr/csr3.html">사회공헌</a></li>
+                <li><a href="./csr/csr4.html">상생경영</a></li>
+                <li><a href="./csr/csr5.html">핫라인</a></li>
+              </ul>
+            </li>
+            <li><a href="./location/location.html">찾아오시는 길</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main>
